# rust_rocket_json_api

./: .env  Cargo.toml
migrations/2019-04-10-163808_create_tasks/: up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
src/routes/: get.rs  post.rs
