[package]
name = "json_api"
version = "0.1.0"
authors = ["Matt Hagner <web@matthagner.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = { version = "1.0.90", features = ["derive"] }
dotenv = "0.13.0"
diesel = { version = "1.4.2", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
